# Suricata-Rules-Validator

./: .gitignore  README.md  README_WEB.md  app.py  pyproject.toml  run.py  run_log_collector.py  run_server.py  ssh_manager.py  test_tail_fix.py
src/: enhanced_log_watcher.py  log_collector.py  log_watcher.py  ssh_manager.py
templates/: index.html
