[project]
name = "suricata-rules-validator"
version = "0.1.0"
description = "Suricata Rules Web Editor and Monitor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paramiko>=3.5.1",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "eventlet>=0.33.0",
]
