[project]
name = "logs-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-socketio>=5.5.1",
    "paramiko>=3.5.1",
    "psutil>=7.0.0",
    "python-socketio>=5.13.0",
    "uvicorn>=0.34.2",
    "watchdog>=6.0.0",
]
